修改商城信息

--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
                 <h3>慕家居</h3>
                 <div class="contact-ways">
                     <p>咨询电话：010-88888888</p>
-                    <p>公司网址：www.imooc.com</p>
-                    <p>邮箱：KEFU@IMOOC.com</p>
+                    <p>公司网址：www.yunjiaju.com</p>
+                    <p>邮箱：KEFU@YUNJIAJU.com</p>
                 </div>
             </div>
         </div>
         <!-- copyright -->
         <div class="copyright">
-            <p>Copyright &copy; 2020 imooc.com All Rights Reserved | 京ICP备 </p>
+            <p>Copyright &copy; 2020 yunjiaju.com All Rights Reserved | 京ICP备 </p>
         </div>
     </footer>
 </body>
